@@ -1,3 +1,10 @@
+2017-07-31  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/25967
+	* config/i386/i386.c (ix86_allocate_stack_slots_for_args):
+	New function.
+	(TARGET_ALLOCATE_STACK_SLOTS_FOR_ARGS): Define.
+
 2017-07-31  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
 
 	* config.gcc: Add z14.
